--- a/app/themes/high-contrast/variables.scss
+++ b/app/themes/high-contrast/variables.scss
@@ -211,6 +211,7 @@ tg-project-menu {
 .taskboard-table-body {
     .taskboard-tasks-box {
         background: $white;
+        border: 1px solid $black;
     }
 }
 
